--- a/force-app/main/default/classes/test/BrokerStatusControllerTest.cls
+++ b/force-app/main/default/classes/test/BrokerStatusControllerTest.cls
@@ -1,31 +1,40 @@
 @IsTest
 private class BrokerStatusControllerTest {
-    @IsTest
-    static void itShouldReturnMemberCount() {
+  @IsTest
+  static void itShouldReturnMemberCount() {
+    // GIVEN there are members created in the last month
+    Account member = new Account(Name = 'name');
+    insert member;
 
-        //Arrange
-        Account mockAccount = new Account(Name = 'name');
-        insert mockAccount;
+    MemberPlan memberPlan1 = new MemberPlan(
+      Name = 'first',
+      MemberId = member.Id,
+      CreatedDate = System.now().addMonths(-3)
+    );
+    MemberPlan memberPlan2 = new MemberPlan(
+      Name = 'second',
+      MemberId = member.Id,
+      CreatedDate = System.now().addDays(-2)
+    );
+    insert new List<MemberPlan>{ memberPlan1, memberPlan2 };
 
-        MemberPlan firstRecord = new MemberPlan(
-            Name = 'firstName',
-            MemberId = mockAccount.Id,
-            CreatedDate = System.now().addMonths(-3)
-        );
-        insert firstRecord;
-        MemberPlan secondRecord = new MemberPlan(
-            Name = 'secondName',
-            MemberId = mockAccount.Id,
-            CreatedDate = System.now().addDays(-2)
-        );
-        insert secondRecord;
+    // WHEN method is run
+    Test.startTest();
+    Map<String, Object> result = (Map<String, Object>) JSON.deserializeUntyped(
+      BrokerStatusController.getMemberCount()
+    );
+    Test.stopTest();
 
-        // test
-        Test.startTest();
-            String MemberCount = BrokerStatusController.getMemberCount();
-        Test.stopTest();
-
-        //assert
-        System.assertNotEquals(null, MemberCount, 'MemberCount cannot be null');
-    }
+    // THEN member count should match
+    Assert.areEqual(
+      result.get('total'),
+      2,
+      'should be equal the total number of members'
+    );
+    Assert.areEqual(
+      result.get('totalUntilLastMonth'),
+      1,
+      'should be equal the total number of members until last month'
+    );
+  }
 }
